--- a/Microsvc.Web/Views/Product/ProductEdit.cshtml
+++ b/Microsvc.Web/Views/Product/ProductEdit.cshtml
@@ -1,6 +1,7 @@
-﻿@model ProductDto
+﻿@using Micorsvc.Web.Models
+@model ProductDto
 
-<form asp-action="ProductEdit" enctype="multipart/form-data">
+<<form asp-action="ProductEdit" enctype="multipart/form-data">
     <br />
     <div class="container border p-3">
         <h1 class="text-white text-center">Edit Product</h1>
