--- a/Microsvc.Web/Views/Home/ProductDetails.cshtml
+++ b/Microsvc.Web/Views/Home/ProductDetails.cshtml
@@ -2,7 +2,7 @@
 @model ProductDto
 
 <form method="post">
-    <input asp-for="ProductId" hidden/>
+    <input asp-for="ProductId" hidden />
     <div class=" pt-4">
         <div class="card container" style="border:1px solid #808080;">
             <div class="card-header bg-dark text-light row" style="border-radius: 0px;">
@@ -10,7 +10,7 @@
                     <h1 class="text-white">@Model.Name</h1>
                 </div>
                 <div class="col-12 col-md-6 text-end">
-                    <h1 class="text-warning">@string.Format("{0:c}", Model.Price)</h1>
+                    <h1 class="text-warning"> @string.Format("{0:c}", Model.Price)</h1>
                 </div>
             </div>
             <div class="card-body">
@@ -37,7 +37,7 @@
             </div>
             <div class="card-footer row bg-dark">
                 <div class="col-12 col-md-6 pb-1 ">
-                    <a class="btn btn-success btn-square form-control btn-lg" asp-action="Index" style="height:50px;">Back to List</a>
+                    <a asp-action="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Back to List</a>
                 </div>
                 <div class="col-12 col-md-6 ">
                     <button type="submit" class="btn btn-primary form-control btn-lg" style="height:50px;">Add to Cart</button>
@@ -48,5 +48,5 @@
 </form>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial.cshtml" />
+    <partial name="_ValidationScriptsPartial" />
 }
