--- a/Microsvc.Web/Views/Product/ProductCreate.cshtml
+++ b/Microsvc.Web/Views/Product/ProductCreate.cshtml
@@ -1,14 +1,15 @@
-﻿@using Micorsvc.Web.Models
+﻿@using Micorsvc.Web.Models﻿
 @model ProductDto
 
 <form asp-action="ProductCreate" enctype="multipart/form-data">
     <br />
     <div class="container border p-3">
         <h1 class="text-white text-center">Create Product</h1>
+
         <hr />
         <div class="row">
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Name</label>
+                <label class="control-label pt-2" style="font-size:20px;"> Name</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="Name" class="form-control" />
@@ -29,6 +30,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="col-2">
+                <label class="control-label pt-2" style="font-size:20px;">Price</label>
+            </div>
+            <div class="col-10 pb-3">
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="col-2">
                 <label class="control-label pt-2" style="font-size:20px;">ImageUrl</label>
             </div>
             <div class="col-10 pb-3">
@@ -36,24 +44,24 @@
                 <input asp-for="ImageUrl" hidden class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
-            <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Price</label>
-            </div>
-            <div class="col-10 pb-3">
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
+
             <div class="col-5 offset-2">
 
-                <a class="btn-primary btn form-control" asp-action="ProductIndex">Back to List</a>
+                <a asp-action="ProductIndex" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
                 <input type="submit" value="Create" class="btn btn-success form-control" />
+
             </div>
+
+        </div>
+
+        <div>
         </div>
     </div>
 </form>
 
+
 @section Scripts {
-    <partial name="_ValidationScriptsPartial.cshtml" />
+    <partial name="_ValidationScriptsPartial" />
 }
